RESOLVED FIXED 260562
AX: AXObjectCache::handleAllDeferredChildrenChanged doesn't need to call postPlatformNotification in MAC and IOS_FAMILY ports.
https://bugs.webkit.org/show_bug.cgi?id=260562
Summary AX: AXObjectCache::handleAllDeferredChildrenChanged doesn't need to call post...
Andres Gonzalez
Reported 2023-08-22 17:58:25 PDT
.
Attachments
Patch (5.45 KB, patch)
2023-08-22 18:10 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-22 17:58:36 PDT
Andres Gonzalez
Comment 2 2023-08-22 18:10:16 PDT
EWS
Comment 3 2023-08-23 08:47:57 PDT
Committed 267189@main (1534dabccbb4): <https://commits.webkit.org/267189@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467391 [details].
Note You need to log in before you can comment on or make changes to this bug.