AX: AXObjectCache::handleAllDeferredChildrenChanged doesn't need to call postPlatformNotification in MAC and IOS_FAMILY ports. https://bugs.webkit.org/show_bug.cgi?id=260562 <rdar://problem/114292575>

Reviewed by Tyler Wilcock.

This patch is a follow up to the patch in https://bugs.webkit.org/show_bug.cgi?id=258998.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAllDeferredChildrenChanged):
Do not call postPlatformNotification for the COCOA platforms since AXChildrenChanged is not mapped to any platform notification. Even if this notification were mapped, like in the case of GTK, the update to the isolated tree should happen before a platform client is notify of a change. This patch also fixes that issue.

(WebCore::AXObjectCache::handleChildrenChanged):
Moved the postPlatformNotification call from this method to the above one.

(WebCore::AXObjectCache::updateIsolatedTree):
Removed the case for AXChildrenNotification since it is not used any longer.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateChildrenForObjects):
Added this new method with a FIXME comment for future optimization.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:

Canonical link: https://commits.webkit.org/267189@main